--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,7 +20,6 @@
 /* productList */
 h2{
   text-align: center;
-  margin-right: -35px;
 }
 ul {
   list-style-type: none;
@@ -28,5 +27,10 @@ ul {
 }
 li {
   margin-bottom: 10px;
+}
+
+/* product folder: ui.js */
+div>img{
+  width: 200px;
 }
 
